# knightvision-server

./: .gitignore  README.md  chess_detector_lw_requirements.bat  eco_openings.json  entrypoint.sh  pyproject.toml  server.Containerfile
Knight Vision (Detection & FEN Conversion Process)/examples/: test_pipeline.py
Knight Vision (Detection & FEN Conversion Process)/model/: results.csv
Knight Vision (Detection & FEN Conversion Process)/src/: board_info_selector.py
Knight Vision - YOLOv8 Training Assets/: Knight Vision Model Training.ipynb  README.md
examples/: complex_test_board_corrected.npy  test_pipeline.py
examples/perspective_corrections/: 107_jpg.rf.42f6b2e0e8049eeeed63bf690f97d44c.npy  109_jpg.rf.740bc4194f0d7a300b2aad94b3cbdc25.npy  122_jpg.rf.a84dda7adc37b82397eff8c0e4d05fce.npy  124_jpg.rf.a1cef240cf8e07aa6bfdf424a8c926c6.npy  1_jpg.rf.3be78652b29e00735fa499b98b59f603.npy  38_jpg.rf.5721f8bc9a1eb379ec89b72cece2017f.npy  48_jpg.rf.dde75a0657d7cf1a465ce2dec8a05a12.npy  49_jpg.rf.35d5e620d5bbfb1635b1d4e92cdc02a7.npy  5_jpg.rf.7d43ffae4239658eec860af88e85fd21.npy  61_jpg.rf.a128d5192f01ebc4065ef994c47ee2c0.npy  73_jpg.rf.9da6666fe924ee8c367347c75672cd93.npy  74_jpg.rf.c7ef31b637c069ef8a20d340e42acb34.npy  test_board_corrected.npy
model/: args.yaml  data.yaml  training_requirements.txt
src/: chess_detector.py  chess_detector_lw.py  openings.py  server.py  visualisation_utils.py
