[project]
name = "knightvision-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "pillow>=11.2.1",
    "ultralytics>=8.3.113",
    "numpy>=2.1.1",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86"
]
